# xb-sim-star

./: CMakeLists.txt  DAC.h  README.md  crossbar.cu  crossbar.h  crossbar_control.h  crossbar_cuda.h  main.cpp  numgen.h
templates/: conv_cpp.template  linear_cpp.template
